# JaxDecompiler

./: README.md  decompiler.py  main_example.py  primitive_mapping.py  pyproject.toml  test.py  test_add.py  test_equations.py  test_jit.py  test_parallel.py  test_real_life_examples.py  test_tensor.py
benchmark/: Gradient_MapReduce.py  MLP.py  MPI_allreduce.py  MapReduce.py  Simulation.py  bench.sh  run_experiment_pool_mpi_allreduces.sh  run_slurm_mpi_allreduce.sh
src/: decompiler.py
src/JaxDecompiler/: decompiler.py  primitive_mapping.py
tests/: run_coverage_test.sh  run_unit_tests.sh  test_add.py  test_equations.py  test_jit.py  test_parallel.py  test_real_life_examples.py  test_sparse.py  test_special_var_name.py  test_tensor.py  unit_test.py
